--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,14 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
+- task: AzureResourceManagerTemplateDeployment@3
+  inputs:
+    deploymentScope: 'Subscription'
+    azureResourceManagerConnection: 'connection-pipeline'
+    subscriptionId: '20e6b042-5ece-4041-9ee3-215b7f78a3e4'
+    location: 'East US'
+    templateLocation: 'Linked artifact'
+    deploymentMode: 'Incremental'
 - master
 
 pool:
